--- a/readme
+++ b/readme
@@ -3,7 +3,7 @@ SLAM - Screen Layout Automatic Manager
 python setup.py install
 
 Requires :
-- python3
+- python >= 3.2
 - ISL library (usually shipped with gcc)
 - Boost::Python
 - xcffib python Xcb binding
